--- a/course-remote-info.yaml
+++ b/course-remote-info.yaml
@@ -3,7 +3,7 @@ hyperskill_project:
   ide_files: https://stepik.org/media/attachments/lesson/657120/additional_files.json
   is_template_based: false
   use_ide: true
-update_date: "Tue, 06 Jun 2023 13:02:46 UTC"
+update_date: "Wed, 07 Jun 2023 14:04:04 UTC"
 stages:
 - id: 1161
   step: 18067
@@ -22,7 +22,7 @@ stages:
   is_completed: true
 - id: 1166
   step: 18072
-  is_completed: false
+  is_completed: true
 topics:
   0:
   - title: Computer algorithms
